# q-founder-os

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  EXECUTION-PLAN.md  INSTANCE-SETUP.md  INSTANCES.md  PHASE-0-AUDIT.md  README.md  SETUP.md  UPDATE.md  build-template-repo.sh  fix-imports.sh  instance-registry.json  kipi  kipi-cluster-add.py  kipi-migrate.py  kipi-new-instance.sh  kipi-sync-skills-helper.py  kipi-sync-skills.sh  kipi-update.sh  migrate-ktlyst.sh  settings-template.json  skill-manifest.json  validate-separation.py  validate-separation.sh
.claude/: settings.json
kipi-mcp/: pyproject.toml
kipi-mcp/canonical/: decisions.md  lead-lifecycle-rules.md  objections.md  talk-tracks.md
kipi-mcp/sources/: calendar.yaml  ga4-metrics.yaml  ga4-utm.yaml  gmail.yaml  graph-kb.yaml  linkedin-analytics.yaml  linkedin-dms.yaml  linkedin-feed.yaml  linkedin-notifications.yaml  linkedin-outbound.yaml  linkedin-prospects.yaml  linkedin-publish-recon.yaml  medium.yaml  notion-actions.yaml  notion-contacts.yaml  notion-pipeline.yaml  reddit-leads.yaml  reddit-subs.yaml  substack.yaml  vc-pipeline.yaml  x-lead-search.yaml  x-own-posts.yaml
kipi-mcp/sources/chrome/: linkedin-analytics.md  linkedin-dms.md  linkedin-feed.md  linkedin-notifications.md  linkedin-prospects.md  linkedin-publish-recon.md
kipi-mcp/tests/: conftest.py  test_bus_verifier.py  test_guide_loader.py  test_harvest_orchestrator.py  test_harvest_store.py  test_http_executor.py  test_linter.py  test_local_executor.py  test_loop_tracker.py  test_migrator.py  test_morning_init.py  test_orchestrator_verifier.py  test_paths.py  test_schedule_verifier.py  test_schema_gen.py  test_server_integration.py  test_source_registry.py  test_validator.py
(+641 files in other folders)
