[project]
name = "kipi-mcp"
version = "0.1.0"
description = "MCP server for kipi founder OS instance management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "platformdirs>=4.9.4",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-asyncio"]

[project.scripts]
kipi-mcp = "kipi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
